# Grove

./: .env.example  .gitignore  Ai pm产品方案.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.grove/: config.example.yml  team.example.yml
docs/: project-baseline.md  setup-guide.md
docs/superpowers/plans/: 2026-03-21-phase1-foundation.md  2026-03-21-phase2-prd-communication.md  2026-03-21-phase3-task-management.md  2026-03-21-phase4-daily-report.md  2026-03-21-phase5-pr-review-doc-sync.md  2026-03-21-phase6-polish-opensource.md  2026-03-23-hot-toggle.md  2026-03-23-project-management-enhancement.md  2026-03-24-prd-baseline-merge.md
docs/superpowers/specs/: 2026-03-21-grove-architecture-design.md  2026-03-23-hot-toggle-design.md  2026-03-23-project-management-enhancement-design.md  (+1 more)
grove/: config.py  main.py
grove/core/: event_bus.py  events.py  member_resolver.py  module_registry.py  storage.py
grove/ingress/: admin.py  github_webhook.py  health.py  lark_webhook.py  lark_websocket.py  scheduler.py
grove/utils/: commit_classifier.py
tests/: conftest.py
tests/test_core/: test_config.py  test_event_bus.py  test_events.py  test_member_resolver.py  test_module_registry.py  test_storage.py
tests/test_ingress/: test_admin.py  test_github_webhook.py  test_health.py  test_lark_webhook.py  test_scheduler.py
tests/test_integrations/: test_github_client.py  test_lark_cards.py  test_lark_client.py  test_lark_docs.py  test_llm_client.py
tests/test_utils/: test_commit_classifier.py
(+71 files in other folders)
